# Zadanie2

./: .gitignore  Makefile.am  README.md  configure.ac  libprostokat.c  libprostokat.h  libprostopadloscian.c  libprostopadloscian.h  main.c
